- npm run test and prettier changes

--- a/app/employee/search-employee/SearchEmployee.module.css
+++ b/app/employee/search-employee/SearchEmployee.module.css
@@ -1,15 +1,15 @@
 .rootGroup {
-    align-items: baseline;
-    flex-direction: column;
+  align-items: baseline;
+  flex-direction: column;
 }
 
 .rootText {
-    font-size: 48px;
-    font-weight: bold;
-    text-decoration: underline;
-    text-underline-offset: 8px;
+  font-size: 48px;
+  font-weight: bold;
+  text-decoration: underline;
+  text-underline-offset: 8px;
 }
 
 .button {
-    background-color: #1B4965;
+  background-color: #1b4965;
 }
