--- a/components/DashboardTitle/DashboardTitle.module.css
+++ b/components/DashboardTitle/DashboardTitle.module.css
@@ -1,21 +1,18 @@
-
 .container {
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   padding: 20px 40px;
-  background: #f8f9fa;  
+  background: #f8f9fa;
   border-radius: 12px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05); 
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
 }
-
 
 .textWrapper {
   display: flex;
   flex-direction: column;
 }
-
 
 .heading {
   font-weight: bold;
@@ -24,12 +21,10 @@
   margin-bottom: 5px;
 }
 
-
 .name {
-  color: #205781; 
+  color: #205781;
   font-weight: 700;
 }
-
 
 .subText {
   font-size: 1rem;
@@ -37,14 +32,12 @@
   margin-top: 5px;
 }
 
-
 .date {
   font-weight: 500;
   font-size: 1.2rem;
   color: #7f8c8d;
   font-style: italic;
 }
-
 
 @media (max-width: 768px) {
   .container {
@@ -68,11 +61,11 @@
   }
 }
 
-.endofbar{
+.endofbar {
   display: flex;
-  align-items:center
+  align-items: center;
 }
 
 .bellspace {
- margin-left: 10px;
+  margin-left: 10px;
 }
