--- a/app/employee/delete-employee/DeleteEmployee.module.css
+++ b/app/employee/delete-employee/DeleteEmployee.module.css
@@ -1,39 +1,39 @@
 .rootGroup {
-    align-items: baseline;
-    flex-direction: column;
+  align-items: baseline;
+  flex-direction: column;
 }
 
 .rootText {
-    font-size: 48px;
-    font-weight: bold;
-    text-decoration: underline;
-    text-underline-offset: 8px;
+  font-size: 48px;
+  font-weight: bold;
+  text-decoration: underline;
+  text-underline-offset: 8px;
 }
 
 .disabledText[disabled] {
-    color: #222;
+  color: #222;
 }
 
 .button {
-    background-color: #1b4965;
+  background-color: #1b4965;
 }
 
 .button:hover {
-    background-color: red;
+  background-color: red;
 }
 
 .selectRoot {
-    width: 100%;
+  width: 100%;
 }
 
 .simpleGridRoot {
-    width: 100%;
+  width: 100%;
 }
 
 .modalTitle {
-    font-size: larger;
-    font-weight: 700;
-    text-decoration: underline;
-    text-underline-offset: 4px;
-    color: #1B4965;
+  font-size: larger;
+  font-weight: 700;
+  text-decoration: underline;
+  text-underline-offset: 4px;
+  color: #1b4965;
 }
