--- a/components/CreateRor/CreateRor.module.css
+++ b/components/CreateRor/CreateRor.module.css
@@ -1,73 +1,73 @@
 .rorContainer {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .rootText {
-    font-size: 48px;
-    font-weight: bold;
-    text-decoration: underline;
-    text-underline-offset: 8px;
+  font-size: 48px;
+  font-weight: bold;
+  text-decoration: underline;
+  text-underline-offset: 8px;
 }
 
 .progressBar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
 }
 
 .stepHeader {
-    font-size: 32px;
-    font-weight: bold;
+  font-size: 32px;
+  font-weight: bold;
 }
 
 .navButtonContainer {
-    margin-top: 30px;
-    display: flex;
-    justify-content: flex-end;
-    gap: 40px;
+  margin-top: 30px;
+  display: flex;
+  justify-content: flex-end;
+  gap: 40px;
 }
 
 .rorTemplateContainer {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 
 .modalTitle {
-    font-size: x-large;
-    font-weight: 700;
-    text-decoration: underline;
-    text-underline-offset: 4px;
-    color: #1B4965;
+  font-size: x-large;
+  font-weight: 700;
+  text-decoration: underline;
+  text-underline-offset: 4px;
+  color: #1b4965;
 }
 
 .outerScrollBox {
-    border: 2px solid rgb(237, 237, 232);
-    padding: 8px;
-    border-radius: 20px;
+  border: 2px solid rgb(237, 237, 232);
+  padding: 8px;
+  border-radius: 20px;
 }
 
 .scrollableContainer {
-    overflow-y: scroll;
-    height: 58vh;
-    padding-left: 1rem;
+  overflow-y: scroll;
+  height: 58vh;
+  padding-left: 1rem;
 }
 
 .scrollableContainer::-webkit-scrollbar {
-    width: 1rem;
+  width: 1rem;
 }
 
 .scrollableContainer::-webkit-scrollbar-track {
-    background: #fff;
+  background: #fff;
 }
 
 .scrollableContainer::-webkit-scrollbar-thumb {
-    background: #9da9b0;
-    border-radius: 100vw;
-    border: 0.20rem solid #fff;
+  background: #9da9b0;
+  border-radius: 100vw;
+  border: 0.2rem solid #fff;
 }
 
 .navButton {
-    width: 120px;
+  width: 120px;
 }
