--- a/components/Login/Login.module.css
+++ b/components/Login/Login.module.css
@@ -1,72 +1,72 @@
 .loginContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-color: #f9f9f9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #f9f9f9;
 }
 
 .loginBox {
-    background: white;
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 400px;
-    text-align: center;
+  background: white;
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 400px;
+  text-align: center;
 }
 
 .title {
-    font-size: 2rem;
-    color: #333;
-    margin-bottom: 2rem;
+  font-size: 2rem;
+  color: #333;
+  margin-bottom: 2rem;
 }
 
 .inputs {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 .input {
-    width: 100%;
+  width: 100%;
 }
 
 .loginButton {
-    background-color: #1B4965;
-    color: white;
-    margin-bottom: 2rem;
+  background-color: #1b4965;
+  color: white;
+  margin-bottom: 2rem;
 }
 
 .loginButton:hover {
-    background-color: #336584;
+  background-color: #336584;
 }
 
 .footer {
-    text-align: center;
+  text-align: center;
 }
 
 .noAccount {
-    font-size: 1rem;
-    color: #333;
-    margin-bottom: 0.5rem;
+  font-size: 1rem;
+  color: #333;
+  margin-bottom: 0.5rem;
 }
 
 .contact {
-    font-size: 0.9rem;
-    color: #666;
+  font-size: 0.9rem;
+  color: #666;
 }
 
 .contact a {
-    color: #1B4965;
-    text-decoration: none;
+  color: #1b4965;
+  text-decoration: none;
 }
 
 .contact a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .errorTxt {
-    color: red;
+  color: red;
 }
