--- a/components/Odor1/odor1.module.css
+++ b/components/Odor1/odor1.module.css
@@ -1,88 +1,85 @@
 .selectBar {
-    width: 50%;
+  width: 50%;
 }
 
 .odorText {
-    font-size: 48px;
-    font-weight: bold;
-    text-decoration: underline;
-    text-underline-offset: 8px;
+  font-size: 48px;
+  font-weight: bold;
+  text-decoration: underline;
+  text-underline-offset: 8px;
 }
 
 .templateTitle {
-    font-size: 32px;
-    font-weight: bold;
+  font-size: 32px;
+  font-weight: bold;
 }
 
 .rootText {
-    font-size: 30px;
-    font-weight: bold;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .button {
-    background-color: #228BE6;
-    color: white;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+  background-color: #228be6;
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .button:hover {
-    background-color: #1D7ED6;
+  background-color: #1d7ed6;
 }
 
 .buttonIncrement {
-    margin-left: 0.5vw;
+  margin-left: 0.5vw;
 }
 
 .buttonDecrement {
-    margin-right: 0.5vw;
+  margin-right: 0.5vw;
 }
 
-
 .rootOuterGroup {
-    height: 95vh;
-    display: flex;
-
-  }
+  height: 95vh;
+  display: flex;
+}
 
 .searchGroup {
-    display: flex;
-    align-items: end;
-    justify-content: flex-start;
-    width: 100%;
-  }
+  display: flex;
+  align-items: end;
+  justify-content: flex-start;
+  width: 100%;
+}
 
-  .outerScrollingBox {
-    border: 2px solid rgb(237, 237, 232);
-    padding: 8px;
-    border-radius: 20px;
+.outerScrollingBox {
+  border: 2px solid rgb(237, 237, 232);
+  padding: 8px;
+  border-radius: 20px;
 }
 
 /* Kyles Reference for :https://dev.to/sagnik77/custom-scrollbars-with-css-the-easy-way-3ano  */
 /* the custom CSS  */
-.scrollableContainer { 
-    overflow-y: scroll;
-    height: 58vh;
+.scrollableContainer {
+  overflow-y: scroll;
+  height: 58vh;
 }
 
 .scrollableContainer::-webkit-scrollbar {
-    width: 1rem;
-    /* height: 1rem; */
-  }
+  width: 1rem;
+  /* height: 1rem; */
+}
 
-  .scrollableContainer::-webkit-scrollbar-track {
-    background: #fff;
-  }
+.scrollableContainer::-webkit-scrollbar-track {
+  background: #fff;
+}
 
-  .scrollableContainer::-webkit-scrollbar-thumb {
-    background: #9da9b0;
-    border-radius: 100vw;
-    border: 0.20rem solid #fff;
-  }
+.scrollableContainer::-webkit-scrollbar-thumb {
+  background: #9da9b0;
+  border-radius: 100vw;
+  border: 0.2rem solid #fff;
+}
 
-
-  .imgModalID:hover{
-    text-decoration: underline;
-    cursor:pointer;
-  }
+.imgModalID:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
