--- a/components/Odor2/odor2.module.css
+++ b/components/Odor2/odor2.module.css
@@ -1,99 +1,98 @@
-
 .templateTitle {
-    font-size: 32px;
-    font-weight: bold;
+  font-size: 32px;
+  font-weight: bold;
 }
 
 .buttonDiv {
-    display: flex;
-    align-items:flex-end;
+  display: flex;
+  align-items: flex-end;
 }
 
 .button {
-    background-color: #228BE6;
-    color: white;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+  background-color: #228be6;
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .button:hover {
-    background-color: #1D7ED6;
+  background-color: #1d7ed6;
 }
 
 .buttonIncrement {
-    margin-left: 0.5vw;
+  margin-left: 0.5vw;
 }
 
 .buttonDecrement {
-    margin-right: 0.5vw;
+  margin-right: 0.5vw;
 }
 
 .orderTotalLabel {
-    font-size: 14px;
-    font-weight:700;
-    margin-top: .8vh;
+  font-size: 14px;
+  font-weight: 700;
+  margin-top: 0.8vh;
 }
 
 .cancel {
-    margin-left: 1vw;
+  margin-left: 1vw;
 }
 
 .orderTotalText {
-    font-size: 14px;
-    margin-top: .3vh;
+  font-size: 14px;
+  margin-top: 0.3vh;
 }
 
 .rowStyleOverFlow {
-    max-width: 150px;
-    overflow-x: scroll;
-    scrollbar-width: 'none';
+  max-width: 150px;
+  overflow-x: scroll;
+  scrollbar-width: 'none';
 }
 
 .odorText {
-    font-size: 48px;
-    font-weight: bold;
-    text-decoration: underline;
-    text-underline-offset: 8px;
+  font-size: 48px;
+  font-weight: bold;
+  text-decoration: underline;
+  text-underline-offset: 8px;
 }
 
 .interiorDiv {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
 .rootText {
-    font-size: 30px;
-    font-weight: bold;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .outerScrollingBox {
-    border: 2px solid rgb(237, 237, 232);
-    padding: 8px;
-    border-radius: 20px;
+  border: 2px solid rgb(237, 237, 232);
+  padding: 8px;
+  border-radius: 20px;
 }
 
 /* Kyles Reference for :https://dev.to/sagnik77/custom-scrollbars-with-css-the-easy-way-3ano  */
 /* the custom CSS  */
-.scrollableContainer { 
-    overflow-y: scroll;
-    height: 58vh;
+.scrollableContainer {
+  overflow-y: scroll;
+  height: 58vh;
 }
 
 .scrollableContainer::-webkit-scrollbar {
-    width: 1rem;
-    /* height: 1rem; */
-  }
+  width: 1rem;
+  /* height: 1rem; */
+}
 
-  .scrollableContainer::-webkit-scrollbar-track {
-    background: #fff;
-  }
+.scrollableContainer::-webkit-scrollbar-track {
+  background: #fff;
+}
 
-  .scrollableContainer::-webkit-scrollbar-thumb {
-    background: #9da9b0;
-    border-radius: 100vw;
-    border: 0.20rem solid #fff;
-  }
+.scrollableContainer::-webkit-scrollbar-thumb {
+  background: #9da9b0;
+  border-radius: 100vw;
+  border: 0.2rem solid #fff;
+}
