--- a/components/Odor3/odor3.module.css
+++ b/components/Odor3/odor3.module.css
@@ -1,67 +1,65 @@
 .odorText {
-    font-size: 48px;
-    font-weight: bold;
-    text-decoration: underline;
-    text-underline-offset: 8px;
+  font-size: 48px;
+  font-weight: bold;
+  text-decoration: underline;
+  text-underline-offset: 8px;
 }
 
 .orderTotalLabel {
-    font-size: 14px;
-    font-weight:700;
-    margin-top: .8vh;
-
+  font-size: 14px;
+  font-weight: 700;
+  margin-top: 0.8vh;
 }
 
 .orderTotalText {
-    font-size: 14px;
-    margin-top: .3vh;
-
+  font-size: 14px;
+  margin-top: 0.3vh;
 }
 
 .templateTitle {
-    font-size: 32px;
-    font-weight: bold;
-    text-align: center;
+  font-size: 32px;
+  font-weight: bold;
+  text-align: center;
 }
 
 .templateHeading {
-    font-size: 28px;
-    font-weight: bold;
+  font-size: 28px;
+  font-weight: bold;
 }
 
 .remarksStyle {
-    width: 28.5%;
+  width: 28.5%;
 }
 
 .outerScrollingBox {
-    border: 2px solid rgb(237, 237, 232);
-    padding: 8px;
-    border-radius: 20px;
+  border: 2px solid rgb(237, 237, 232);
+  padding: 8px;
+  border-radius: 20px;
 }
 
 /* Kyles Reference for :https://dev.to/sagnik77/custom-scrollbars-with-css-the-easy-way-3ano  */
 /* the custom CSS  */
-.scrollableContainer { 
-    overflow-y: scroll;
-    height: 58vh;
+.scrollableContainer {
+  overflow-y: scroll;
+  height: 58vh;
 }
 
 .scrollableContainer::-webkit-scrollbar {
-    width: 1rem;
-    /* height: 1rem; */
-  }
+  width: 1rem;
+  /* height: 1rem; */
+}
 
-  .scrollableContainer::-webkit-scrollbar-track {
-    background: #fff;
-  }
+.scrollableContainer::-webkit-scrollbar-track {
+  background: #fff;
+}
 
-  .scrollableContainer::-webkit-scrollbar-thumb {
-    background: #9da9b0;
-    border-radius: 100vw;
-    border: 0.20rem solid #fff;
-  }
+.scrollableContainer::-webkit-scrollbar-thumb {
+  background: #9da9b0;
+  border-radius: 100vw;
+  border: 0.2rem solid #fff;
+}
 
-  .imgModalID:hover{
-    text-decoration: underline;
-    cursor:pointer;
-  }
+.imgModalID:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
