--- a/components/P2Access/P2Access.module.css
+++ b/components/P2Access/P2Access.module.css
@@ -81,7 +81,7 @@
 
 .rootRequisitionThead {
   color: white;
-  background: linear-gradient(135deg, #2c3e50, #4a6572);  
+  background: linear-gradient(135deg, #2c3e50, #4a6572);
   position: sticky;
   top: 0;
   z-index: 1;
@@ -127,7 +127,7 @@
 }
 
 .approveButton {
-  background-color: #54D0ED;
+  background-color: #54d0ed;
   color: white;
   border: none;
   padding: 2px 18px;
@@ -143,7 +143,7 @@
 }
 
 .rejectButton {
-  background-color: #6D6875;
+  background-color: #6d6875;
   color: white;
   border: none;
   padding: 2px 18px;
@@ -159,7 +159,7 @@
 }
 
 .closeTicketButton {
-  background-color: #FFA62B;
+  background-color: #ffa62b;
   color: white;
   border: none;
   padding: 2px 18px;
