--- a/components/UpdateItem/UpdateItem.module.css
+++ b/components/UpdateItem/UpdateItem.module.css
@@ -75,7 +75,7 @@
   font-weight: 700;
   text-decoration: underline;
   text-underline-offset: 4px;
-  color: #1B4965;
+  color: #1b4965;
 }
 
 .loadingContainer {
