--- a/app/odor/odorpage.module.css
+++ b/app/odor/odorpage.module.css
@@ -7,9 +7,20 @@
   background-color: #1d7ed6;
 }
 
-.odorText {
-  font-size: 48px;
-  font-weight: bold;
-  text-decoration: underline;
-  text-underline-offset: 8px;
+.rootText {
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-decoration: none;
+  border-bottom: 3px solid #3c96aa;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+  width: 100%;
+}
+
+.progressBar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
