--- a/components/Odor2/odor2.module.css
+++ b/components/Odor2/odor2.module.css
@@ -1,6 +1,9 @@
 .templateTitle {
   font-size: 32px;
   font-weight: bold;
+  border-bottom: 1px solid #dfd9d9;
+  padding-bottom: 1rem;
+  margin-bottom: 0.5rem
 }
 
 .buttonDiv {
@@ -69,17 +72,48 @@
   font-weight: bold;
 }
 
-.outerScrollingBox {
+.outerScrollBox {
   border: 2px solid rgb(237, 237, 232);
-  padding: 8px;
-  border-radius: 20px;
+  width: 100%;
+  background-color: #fff;
+  padding: 1.5rem;
+  border-radius: 16px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s ease;
+  transform: translateY(20px);
+  opacity: 0;
+  animation: fadeInUp 0.5s ease-out forwards;
 }
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.outerScrollBox:nth-child(1) {
+  animation-delay: 0.2s;
+}
+
+.outerScrollBox:hover {
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+}
+
 
 /* Kyles Reference for :https://dev.to/sagnik77/custom-scrollbars-with-css-the-easy-way-3ano  */
 /* the custom CSS  */
 .scrollableContainer {
   overflow-y: scroll;
-  height: 58vh;
+  scrollbar-width: none;
+  min-height: 50vh;
+  max-height: 56vh;
+  width: 100%;
 }
 
 .scrollableContainer::-webkit-scrollbar {
