--- a/components/Odor1/odor1.module.css
+++ b/components/Odor1/odor1.module.css
@@ -14,7 +14,7 @@
   font-weight: bold;
   border-bottom: 1px solid #dfd9d9;
   padding-bottom: 1rem;
-  margin-bottom: 0.5rem
+  margin-bottom: 0.5rem;
 }
 
 .rootText {
