--- a/components/Odor2/odor2.module.css
+++ b/components/Odor2/odor2.module.css
@@ -3,7 +3,7 @@
   font-weight: bold;
   border-bottom: 1px solid #dfd9d9;
   padding-bottom: 1rem;
-  margin-bottom: 0.5rem
+  margin-bottom: 0.5rem;
 }
 
 .buttonDiv {
@@ -104,7 +104,6 @@
 .outerScrollBox:hover {
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
 }
-
 
 /* Kyles Reference for :https://dev.to/sagnik77/custom-scrollbars-with-css-the-easy-way-3ano  */
 /* the custom CSS  */
