--- a/components/CreateRor/CreateRor.module.css
+++ b/components/CreateRor/CreateRor.module.css
@@ -52,6 +52,7 @@
 .outerScrollBox {
   border: 2px solid rgb(237, 237, 232);
   width: 100%;
+  height: 58vh;
   background-color: #fff;
   padding: 1.5rem;
   border-radius: 16px;
