--- a/components/E3Access/E3Access.module.css
+++ b/components/E3Access/E3Access.module.css
@@ -1,3 +1,8 @@
+.rootMain {
+  width: 100%;
+  height: 100%;
+}
+
 .rootText {
   font-size: 2.5rem;
   font-weight: 700;
@@ -18,7 +23,18 @@
 .rootMainGroup {
   display: flex;
   flex-direction: column;
-  width: 80vw;
+  align-items: flex-start;
+  width: 100%;
+  max-width: 1500px;
+  gap: 1rem;
+  margin: 0 auto;
+}
+
+.rootGroup {
+  overflow-y: scroll;
+  scrollbar-width: none;
+  height: 80vh;
+  padding: 16px 0px;
 }
 
 .rootSectionGroup {
@@ -28,7 +44,7 @@
   background-color: #fff;
   padding: 16px;
   border-radius: 20px;
-  max-height: 55vh;
+  max-height: 40vh;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s ease;
   transform: translateY(20px);
@@ -48,6 +64,18 @@
   }
 }
 
+.rootSectionGroup:nth-child(1) {
+  animation-delay: 0.2s;
+}
+
+.rootSectionGroup:nth-child(2) {
+  animation-delay: 0.4s;
+}
+
+.rootSectionGroup:hover {
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+}
+
 .rootPaginationGroupRequisition {
   display: flex;
   flex-direction: column;
@@ -64,6 +92,16 @@
   width: 100%;
   overflow-y: scroll;
   scrollbar-width: none;
+}
+
+.templateTextId:hover {
+  color: #3c96aa;
+  cursor: pointer;
+}
+
+.odorTextId:hover {
+  color: #3c96aa;
+  cursor: pointer;
 }
 
 @media (max-width: 1024px) {
@@ -172,21 +210,4 @@
 
 .closeTicketButton:hover {
   background-color: #e89726;
-}
-
-.noTemplatesText {
-  text-align: center;
-  font-size: 18px;
-  font-weight: 500;
-  color: #888;
-  margin-top: 20px;
-  padding: 10px;
-  border: 1px dashed #ccc;
-  border-radius: 8px;
-  background-color: #f9f9f9;
-}
-
-.templateTextId:hover {
-  color: #3c96aa;
-  cursor: pointer;
 }
