--- a/components/Odor2/odor2.module.css
+++ b/components/Odor2/odor2.module.css
@@ -64,6 +64,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 10px;
   height: 100%;
 }
 
@@ -110,8 +111,7 @@
 .scrollableContainer {
   overflow-y: scroll;
   scrollbar-width: none;
-  min-height: 50vh;
-  max-height: 56vh;
+  height: 48vh;
   width: 100%;
 }
 
