--- a/components/RorTemplateModal/RorTemplateModal.module.css
+++ b/components/RorTemplateModal/RorTemplateModal.module.css
@@ -68,7 +68,10 @@
 
 .rootHeaderTxt {
   margin-bottom: 18px;
-  font-weight: 800;
+  font-weight: 600;
+  border-bottom: 1px solid #dfd9d9;
+  padding-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .rootBtnArea {
